// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanConfigs ADD_PLAN_CONFIGURATION should add a plan configuration 1`] = `
Immutable.Map {
  "toolid": Immutable.Map {
    "0": Object {
      "config": "ls -l",
      "id": "0",
      "name": "ls",
      "packageInfo": Object {
        "name": "",
        "path": "/",
        "type": "directory",
      },
      "pinned": false,
      "tool": Object {
        "iconUri": "atom://myplugin/icon.png",
        "id": "toolid",
        "name": "shell",
        "uri": "file:///file",
      },
    },
  },
}
`;

exports[`PlanConfigs PIN_PLAN_CONFIGURATION should pin plan config 1`] = `
Immutable.Map {
  "toolid": Immutable.Map {
    "0": Object {
      "config": "ls -l",
      "id": "0",
      "name": "ls",
      "packageInfo": Object {
        "name": "",
        "path": "/",
        "type": "directory",
      },
      "pinned": true,
      "tool": Object {
        "iconUri": "atom://myplugin/icon.png",
        "id": "toolid",
        "name": "shell",
        "uri": "file:///file",
      },
    },
    "1": Object {
      "config": "Invoke-Mimikatz",
      "id": "1",
      "name": "mimikatz",
      "packageInfo": Object {
        "name": "",
        "path": "/",
        "type": "directory",
      },
      "pinned": false,
      "tool": Object {
        "iconUri": "atom://myplugin/icon.png",
        "id": "toolid",
        "name": "powershell",
        "uri": "file:///file",
      },
    },
  },
}
`;

exports[`PlanConfigs REMOVE_PLAN_CONFIGURATION should remove plan config 1`] = `
Immutable.Map {
  "toolid": Immutable.Map {
    "1": Object {
      "config": "Invoke-Mimikatz",
      "id": "1",
      "name": "mimikatz",
      "packageInfo": Object {
        "name": "",
        "path": "/",
        "type": "directory",
      },
      "pinned": false,
      "tool": Object {
        "iconUri": "atom://myplugin/icon.png",
        "id": "toolid",
        "name": "powershell",
        "uri": "file:///file",
      },
    },
  },
}
`;

exports[`PlanConfigs UNPIN_PLAN_CONFIGURATION should unpin plan config 1`] = `
Immutable.Map {
  "toolid": Immutable.Map {
    "0": Object {
      "config": "ls -l",
      "id": "0",
      "name": "ls",
      "packageInfo": Object {
        "name": "",
        "path": "/",
        "type": "directory",
      },
      "pinned": false,
      "tool": Object {
        "iconUri": "atom://myplugin/icon.png",
        "id": "toolid",
        "name": "shell",
        "uri": "file:///file",
      },
    },
    "1": Object {
      "config": "Invoke-Mimikatz",
      "id": "1",
      "name": "mimikatz",
      "packageInfo": Object {
        "name": "",
        "path": "/",
        "type": "directory",
      },
      "pinned": false,
      "tool": Object {
        "iconUri": "atom://myplugin/icon.png",
        "id": "toolid",
        "name": "powershell",
        "uri": "file:///file",
      },
    },
  },
}
`;
